[package]
name = "rust_sum"
version = "0.1.0"
authors = ["Axect <axect@outlook.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
packed_simd_2 = "0.3"

[[bench]]
name = "benchmark"
harness = false
