[package]
name = "files_hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
peroxide = { version = "0.34.4", features = ["nc"] }
serde = { version = "1.0.196", features = ["derive"] }
