[package]
name = "fjall_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fjall = "0.6.1"
peroxide = { version = "0.34.4", features = ["serde"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.196", features = ["derive"] }
