[package]
name = "nativedb_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native_db = "0.5.3"
native_model = "0.4.11"
peroxide = { version = "0.34.4", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
