[package]
name = "rust_o3"
version = "0.1.0"
authors = ["Axect <axect@outlook.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openblas-src = { version = "0.10.11", features = ["system"], default-features = false }
peroxide = { version = "0.39", features = ["O3"] }
